--- a/Natours/project-files/sass/base/_base.scss
+++ b/Natours/project-files/sass/base/_base.scss
@@ -8,15 +8,10 @@
 }
 
 html {
+    // This defines what one REM is
     font-size: 62.5%;
 }
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.7;
-    color: $color-gray-dark;
-    padding: 3rem;
     box-sizing: border-box;
 }
