completed tours section

--- a/Natours/project-files/sass/base/_utilities.scss
+++ b/Natours/project-files/sass/base/_utilities.scss
@@ -2,3 +2,5 @@
 .u-margin-bottom-sm {margin-bottom: 1.5rem;}
 .u-margin-bottom-md {margin-bottom: 4rem;}
 .u-margin-bottom-bg {margin-bottom: 8rem;}
+.u-margin-top-bg {margin-top: 8rem;}
+.u-margin-top-huge {margin-top: 10rem;}
