--- a/Natours/project-files/sass/main.scss
+++ b/Natours/project-files/sass/main.scss
@@ -12,6 +12,8 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/card";
+@import "components/story.scss";
+@import "components/bg-video";
 
 @import "layout/header";
 @import "layout/grid";
