--- a/Natours/project-files/sass/layout/_footer.scss
+++ b/Natours/project-files/sass/layout/_footer.scss
@@ -5,6 +5,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-2;
 
+    @include respond(tab-port){
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
@@ -20,6 +24,11 @@
         padding-top: 2rem;
         display: inline-block;
         text-align: center;
+
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -58,6 +67,12 @@
         padding-top: 2rem;
         display: inline-block;
         float: right;
+
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+            float: none;
+        }
     }
 
     
